/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.rudder.api.profile.v1;

option go_package = "github.com/tkeel-io/tkeel/api/profile/v1;v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知错误
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // @msg=参数错误
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 1;
  // @msg=获取插件列表错误
  // @code=UNKNOWN
  ERR_PLUGIN_LIST = 2;
}